@@ -57,8 +57,6 @@ class Caffeine(GObject.GObject):
         self.sleepIsPrevented = False
 
         self.preventedForProcess = False
-        self.preventedForFlash = False
-
         self.screenSaverCookie = None
         self.powerManagementCookie = None
         self.timer = None
@@ -74,110 +72,8 @@ class Caffeine(GObject.GObject):
         
         settings = Gio.Settings.new(caffeine.BASE_KEY)
 
-        ## check for Flash video.
-        self.flash_durations = {}
-        self.flash_id = None
-        if settings.get_boolean("act-for-flash"):
-            self.setActivateForFlash(True)
         print self.status_string
 
-
-    def setActivateForFlash(self, do_activate):
-        ## In case caffeine is currently activated for Flash
-        self._check_for_Flash()
-
-        if self.flash_id != None:
-            GObject.source_remove(self.flash_id)
-
-        self.flash_id = None
-
-        if do_activate:
-            self.flash_id = GObject.timeout_add(15000,
-                    self._check_for_Flash)
-
-
-    def _check_for_Flash(self):
-        class escape(Exception):pass
-
-        try:
-            ## look for files opened by flashplayer that begin with 'Flash'
-            output = commands.getoutput("python flash_detect.py")
-            if output == "1":
-                raise escape
-
-            elif output.startswith("2\n"):
-                data = output.split("\n")[-1]
-                logging.error("Exception: " + str(data))
-                raise escape
-
-            parsed = []
-            for row in output.split("\n"):
-                try:
-                    iden, length = row.split(" ")
-                    length = int(length)
-                    parsed.append([iden, length])
-                
-                except Exception, data:
-                    logging.error("Exception: " + str(data))
-
-            for iden, length in parsed:
-                if iden != "" and iden not in self.flash_durations:
-                        end_time = time.localtime(int(time.time() + length))
-                        self.flash_durations[iden] = end_time
-
-            idens = [iden for iden, length in parsed]
-
-            for key in self.flash_durations.keys():
-                if key not in idens:
-                    self.flash_durations.pop(key)
-
-            dtimes = []
-            for t in self.flash_durations.values():
-                
-                dtimes.append(int(time.mktime(t) - time.time()))
-
-            dtimes.sort(reverse=True)
-
-            if dtimes == []:
-                if self.preventedForFlash:
-                    self.setActivated(False, note=False)
-                raise escape
-
-            dtime = dtimes[0]
-            if dtime <= 0:
-                raise escape
-
-            if self.preventedForFlash or not self.getActivated():
-
-                logging.info("Caffeine has detected "+
-                            "that Flash video is playing, "+
-                            "and will activate for "+str(dtime)+
-                            " seconds.")
-                
-                self.status_string = _("Activated for Flash video")
-                self.timedActivation(dtime, note=False)
-                self.status_string = _("Activated for Flash video")
-                self.preventedForFlash = True
-            else:
-                logging.info("Caffeine has detected "+
-                    "that Flash video is playing but will "+
-                    "NOT activate because Caffeine is already "+
-                    "activated for a different reason.")
-
-            return True
-
-
-        except escape:
-            pass
-
-        except Exception, data:
-
-            logging.error("Exception: " + str(data))
-            
-        if self.preventedForFlash:
-            self.setActivated(False, note=False)
-
-        return True
 
     def _check_for_process(self):
         activate = False
@@ -293,7 +189,6 @@ class Caffeine(GObject.GObject):
         features of the current computer."""
 
         self.preventedForProcess = False
-        self.preventedForFlash = False
         
         if self.sleepIsPrevented:
             ### sleep prevention was on now turn it off
